added s3 storage classes

--- a/docs/aws/s3.md
+++ b/docs/aws/s3.md
@@ -1,4 +1,4 @@
-## Amazon Simple Storage Service (S3)
+# Amazon Simple Storage Service (S3)
 
 * Used for storing files
 * Can store huge data
@@ -10,12 +10,13 @@
 * Objects gets copied to multiple location(in different AZ or same AZ based on storage class) to to achieve high availability.
 
 #### To store files in S3:
+
 * Define a bucket - a with a globally unique name (not just unique through the region)
 * By default, an account can have 100 bucket. but can request aws to increase the limit
 * each object added to the bucket are given a unique key as identifier
 * can create folder for organizing data .. S3 is not a file system and all operations are done at bucket level, not folder level
 
- ### S3 Storage Classes
+## S3 Storage Classes
  * S3 Standard
  * S3 Intelligent tiering (S3 INT)
  * S3 Standard Infrequent Access (S3 S-IA)
@@ -25,13 +26,17 @@
  
  ![S3 Storage class Comparision](/images/aws/s3/storage_classes.PNG?raw=true)
  
- ##### S3 Standard
+ 
+##### S3 Standard
+ 
  * High throughput, low latency
  * Durability - Eleven 9s
  * Availability SLA - 99.99%
  * Lifecycle Rules  
  ** Lifecycle Rules : they provide an automatic method of managing the life of your data while it is being stored on Amazon S3. By adding a life cycle wall to a bucket you are able to configure and set specific criteria that can automatically move your data from one class to another or delete it from Amazon S3 altogether. You may want to do this as a cost saving exercise by moving data to a cheaper storage class after a set period of time.
- ##### S3 Intelligent tiring
+ 
+##### S3 Intelligent tiering
+ 
  * used when data access Frequency in unknown
  * it has 2 tire - frequent and infrequent tier
  * frequent tier  is expensive and infrequent tier is cheap
@@ -41,20 +46,21 @@
  * Availability SLA - 99.9% (less then S3 Standard)
  
 ##### S3 Standard Infrequent Access (S3 S-IA)
+
 * Similar to infrequent tier of S3 Intelligent tiring
 * Cheaper cost then S2 Standard
 * Durability - Eleven 9s
 * Availability SLA - 99.9% (less then S3 Standard)
  
- ##### S3 1 Zone Infrequent Access (S3 Z-IA)
+#### S3 1 Zone Infrequent Access (S3 Z-IA)
+ 
 * Available in single AZ
 * Durability - Eleven 9s but across same AZ
 * Availability SLA - 99.5% (less then S3 Standard and S3 S-IA)
 * 20% lesser cost then standard
 
-### S3 Glacier
+#### S3 Glacier
 
-##### S3 Glacier
 * Low cost long term durable storage solution
 * For storing archival data or long term backup
 * Very less cost compared to S3 standard
@@ -97,7 +103,7 @@ Archives can be any objects similar to S3.
       * Available in 5 - 12 hours
       
       
-##### S3 Glacier Deep Archive
+#### S3 Glacier Deep Archive
 
 Out of all the storage classes offered by S3, Glacier Deep Archive is the cheapest and again being a Glacier class, it focuses on long-term storage. This is an ideal storage class for circumstances that require specific data retention regulations and compliance with minimal access, such as those within the financial or health sector where data records might need to be legally retained for seven years or even longer. The durability and availability matches that of S3 Glacier with eleven 9s durability across multiple AZss with 99.9% availability.
 
@@ -106,6 +112,6 @@ Out of all the storage classes offered by S3, Glacier Deep Archive is the cheape
 
 ![S3 Glacier Comparision](/images/aws/s3/s3_glacier.PNG?raw=true)
 
-##### S3 Storage Class summery
+#### S3 Storage Class summery
 
 ![S3 Glacier Comparision](/images/aws/s3/s3_summery.PNG?raw=true)
