added s3 storage classes

--- a/docs/aws/s3.md
+++ b/docs/aws/s3.md
@@ -27,7 +27,7 @@
  ![S3 Storage class Comparision](/images/aws/s3/storage_classes.PNG?raw=true)
  
  
-##### S3 Standard
+#### S3 Standard
  
  * High throughput, low latency
  * Durability - Eleven 9s
@@ -35,7 +35,7 @@
  * Lifecycle Rules  
  ** Lifecycle Rules : they provide an automatic method of managing the life of your data while it is being stored on Amazon S3. By adding a life cycle wall to a bucket you are able to configure and set specific criteria that can automatically move your data from one class to another or delete it from Amazon S3 altogether. You may want to do this as a cost saving exercise by moving data to a cheaper storage class after a set period of time.
  
-##### S3 Intelligent tiering
+#### S3 Intelligent tiering
  
  * used when data access Frequency in unknown
  * it has 2 tire - frequent and infrequent tier
@@ -45,7 +45,7 @@
  * Durability - Eleven 9s
  * Availability SLA - 99.9% (less then S3 Standard)
  
-##### S3 Standard Infrequent Access (S3 S-IA)
+#### S3 Standard Infrequent Access (S3 S-IA)
 
 * Similar to infrequent tier of S3 Intelligent tiring
 * Cheaper cost then S2 Standard
