added s3 storage classes

--- a/docs/aws/s3.md
+++ b/docs/aws/s3.md
@@ -1,5 +1,7 @@
 # Amazon Simple Storage Service (S3)
 
+[S3 Bucket Properties](#s3-bucket-properties)
+
 * Used for storing files
 * Can store huge data
 * Limit of single file size in a S3 bucket - Min : 0KB and Max : 5TB
@@ -115,3 +117,7 @@ Out of all the storage classes offered by S3, Glacier Deep Archive is the cheape
 #### S3 Storage Class summery
 
 ![S3 Glacier Comparision](/images/aws/s3/s3_summery.PNG?raw=true)
+
+##S3 Bucket Properties
+
+### Versioning
