--- a/docs/aws/s3.md
+++ b/docs/aws/s3.md
@@ -121,3 +121,20 @@ Out of all the storage classes offered by S3, Glacier Deep Archive is the cheape
 ## S3 Bucket Properties
 
 ### Versioning
+
+* allows for multiple versions of the same object to exist
+* allow you to retrieve previous versions of a file, or recover a file should it subjected to accidental deletion
+* managed automatically against objects when you overwrite or delete an object in a bucket that has versioning enabled.
+* Versioning is not enabled by default, however, once you have enabled it, you can't disable it, instead, you can only suspend it on the bucket which will prevent any further versions from being created of your objects, but it will keep all existing versions of objects up to the point of suspension. So, there are 3 states in versioning :
+
+   * Unversioned (this is the default state for buckets)
+   * Versioning-enabled
+   * versioning-suspended
+
+* With versioning enabled, it will consume more storage space(by storing multiple versions of same file) and increase the cost
+
+### Server Access Logging
+
+* server-access logging is enabled on a bucket it captures details of requests that are made to that bucket and its objects
+* Its Important for Security, Root Cause Analysis, audits and governance certifications
+* guaranteed and is conducted on a best-effort basis by S3. logs are collated and sent every few hours
