--- a/docs/aws/s3.md
+++ b/docs/aws/s3.md
@@ -138,3 +138,10 @@ Out of all the storage classes offered by S3, Glacier Deep Archive is the cheape
 * server-access logging is enabled on a bucket it captures details of requests that are made to that bucket and its objects
 * Its Important for Security, Root Cause Analysis, audits and governance certifications
 * guaranteed and is conducted on a best-effort basis by S3. logs are collated and sent every few hours
+* Enabling access logging
+
+  * Existing Bucket
+    
+     * Select Bucket -> Properties Tab -> Server Access Logging tile -> Enable logging (2 fields to complete the step)
+     * 1 - Target Bucket - target bucket will be used to store any logs created by enabling server access logging on your source bucket, which must be in the same region
+     * 2 - target prefix - add a target prefix that s3 will add to the logs from your source bucket  
