--- a/docs/aws/storage/s3.md
+++ b/docs/aws/storage/s3.md
@@ -14,6 +14,7 @@
 #### To store files in S3:
 
 * Define a bucket - a with a globally unique name (not just unique through the region)
+* Bucket names can consist only of lowercase letters, numbers, dots (.), and hyphens (-).
 * By default, an account can have 100 bucket. but can request aws to increase the limit
 * each object added to the bucket are given a unique key as identifier
 * can create folder for organizing data .. S3 is not a file system and all operations are done at bucket level, not folder level
@@ -23,6 +24,7 @@
  * S3 Intelligent tiering (S3 INT)
  * S3 Standard Infrequent Access (S3 S-IA)
  * S3 1 Zone Infrequent Access (S3 Z-IA)
+ * Reduced Redundancy storage (RRS) - Not recommended due to high cost and less durability
  * S3 Glacier
  * S3 Glacier - Deep Archive
  
@@ -103,8 +105,23 @@ Archives can be any objects similar to S3.
    
       * File Size : can go up-to peta bytes of data
       * Available in 5 - 12 hours
+ 
+* Security :
+
+  1. data encrypted by AES-256 algo
+  2. Vault Access Policy
+    * resource based policy applied to specific vault
+    * max 1 access policy per vault
+    * policy contains a "principal" component
+  3. Vault Lock policy
+    * once set can not be changed
+    * used for governance and compliance control
+    * eg. put a policy to not delete the data for next 3 years
       
-      
+* Pricing : 
+  
+  1. Single storage cost regardless of how much storage is being used
+    
 #### S3 Glacier Deep Archive
 
 Out of all the storage classes offered by S3, Glacier Deep Archive is the cheapest and again being a Glacier class, it focuses on long-term storage. This is an ideal storage class for circumstances that require specific data retention regulations and compliance with minimal access, such as those within the financial or health sector where data records might need to be legally retained for seven years or even longer. The durability and availability matches that of S3 Glacier with eleven 9s durability across multiple AZss with 99.9% availability.
@@ -145,3 +162,49 @@ Out of all the storage classes offered by S3, Glacier Deep Archive is the cheape
      * Select Bucket -> Properties Tab -> Server Access Logging tile -> Enable logging (2 fields to complete the step)
      * 1 - Target Bucket - target bucket will be used to store any logs created by enabling server access logging on your source bucket, which must be in the same region
      * 2 - target prefix - add a target prefix that s3 will add to the logs from your source bucket  
+    
+## Security
+1. Bucket Policies 
+  * Controls data access
+  * constructed as JSON policy
+
+2. Access Control List(ACL)
+  * Controls access for users outside account. public access for example
+  * permissions like ListObject. WriteObject
+
+3. Data encryption
+  * Server side encryption with S3 maneged Keys - SSE-S3
+  * Server side encryption with KMS maneged Keys - SSE-KMS
+  * Client Side encryption with KMS maneged Keys - CSE-KMS
+  * Client Side encryption with Customer maneged Keys - CSE-C
+  * SSL Support - secure on transit
+
+## Use cases
+### Data Backup
+### Static Content & Website
+### large dataset
+scientific or statistical data. Horizontal scaling of S3 allow multiple parti to analyse data fast - Bigdata analytics
+### integration with other AWS service
+* eg. EBS snapshots gets stored in S3 (user can not view it in any bucket, managed by aws)
+* cloud trail logs stored in S3
+
+## S3 Anti-patterns
+* Dynamic/ Fast changing data
+* file system requirement
+* structured data to be queried
+* long term archival storage - use Glacier
+
+## Optimizing S3 performance
+### TCP Window Scaling
+* When TCP establishes a connection between a source and destination, a three-way handshake takes place which originates from the source (client). Here’s how it works. Before your client can upload an object to S3 a connection to S3 servers must be created. The client will send a TCP packet with a specified TCP window scale factor in the header. This initial TCP request is known as a SYN request, and it’s part one of the three-way handshake. In part two, S3 will receive this request and respond with a SYN/ACK message back to the client with its supported window scale factor. Finally, an ACK message acknowledging the response is sent back to the S3 server. On completion of this three-way handshake, a connection is established and data can be sent between the client and S3. By increasing the window size with a scale factor (window scaling) it enables you to send larger quantities of data in a single segment and therefore more data at a faster rate.
+* https://datatracker.ietf.org/doc/html/rfc1323
+
+### TCP Selective Acknowledgement
+* Sometimes multiple packets can be lost when using TCP. Understanding which packets have been lost within a TCP window can be difficult to determine. While it’s possible to resend all of the packets, some of these may have already been received by the receiver. TCP selective acknowledgement (SACK) offers a more effective alternative by notifying the sender only in the case of failed packets within that window. As a result, the sender has to resend only the failed packets.
+*  RFC-2018
+
+### Scaling S3 Request Rates
+* On top of TCP Scaling and TCP SACK communications, S3 itself is already well optimized for very high throughput. In July 2018, AWS announced significant improvements to request rate performance. Prior to this announcement, AWS recommended that users randomize prefixes within buckets to help optimize performance--this is no longer required. Now, you can apply multiple prefixes within buckets to improve request rate performance.You are now able to achieve 3,500 PUT/POST/DELETE requests per second along with 5,500 GET requests. These limitations are based on a single prefix, however there is no limit to the number of prefixes that can be used within an S3 bucket. As a result, if you had 20 prefixes you could reach 70,000 PUT/POST/DELETE and 110,000 GET requests per second within the same bucket.
+
+### Integration of Amazon CloudFront
+* Another method to improve optimization is to incorporate Amazon S3 with Amazon CloudFront. This works particularly well if the main request to your S3 data is a GET request. Amazon CloudFront is AWS's content delivery network that speeds up distribution of your static and dynamic content through its worldwide network of edge locations.
