--- a/docs/aws/storage/s3.md
+++ b/docs/aws/storage/s3.md
@@ -208,3 +208,6 @@ scientific or statistical data. Horizontal scaling of S3 allow multiple parti to
 
 ### Integration of Amazon CloudFront
 * Another method to improve optimization is to incorporate Amazon S3 with Amazon CloudFront. This works particularly well if the main request to your S3 data is a GET request. Amazon CloudFront is AWS's content delivery network that speeds up distribution of your static and dynamic content through its worldwide network of edge locations.
+
+## Notes
+* S3 Object URL Structure : https://<bucket-name>.s3-<region>.amazonaws.com/<object-prefix>/<object-name> . eg. https://calabs-s3cf-biplab.s3.us-west-2.amazonaws.com/gallery/index.html
